# pysueca

./: README.md  main.py  pyproject.toml
imagens/: get_images.py
